feat:admin page

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -23,113 +23,193 @@
     <div class="landing-page">
       <header class="navigation">
         <b class="ark">ARK</b>
-        <div class="items-container">
-          <button class="items" id="items">
-            <a href="Login.html" class="button">
-              <div class="login-LP">Login</div>
-            </a>
-          </button>
-        </div>
-      </header>
-      <section class="background-parent">
-        <img
-          class="background-icon"
-          loading="lazy"
-          alt=""
-          src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\Pic1.jpg"
-        />
-
-        <div class="boldtype72-parent">
-          <h1 class="boldtype72">Welcome To ARK</h1>
-          <div class="tasks-done-right-wrapper">
-            <h2 class="tasks-done-right">Tasks done Right</h2>
+        <button
+          class="items-wrapper"
+          onclick="window.location.href = 'Login.html';"
+        >
+          <div class="items">
+            <div class="button">
+              <div class="registerP">Register</div>
+            </div>
           </div>
-        </div>
-        <div class="button-wrapper">
-          <a href="Login.html" class="button1" id="getStartedButton">
-            <div class="get-started">Get Started</div>
-          </a>
-        </div>
-        </div>
-      </section>
-      <section class="navigation-footer">
-        <div class="divider"></div>
-        <div class="footer-content">
-          <div class="ark-footer-wrapper">
-            <div class="ark-footer">
-              <img
-                class="buttons-icon"
-                loading="lazy"
-                alt=""
-                src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\facebook.png"
-              />
+        </button>
+      </header>
+      <main class="frame-parent">
+        <section class="background-parent">
+          <img
+            class="background-icon"
+            loading="lazy"
+            alt=""
+            src="Foto\Pic1.jpg"
+          />
 
-              <div class="ark-links">
-                <div class="ark-link">
-                  <b class="ark1">ARK</b>
+          <div class="hero-title">
+            <h1 class="boldtype72">Welcome To ARK</h1>
+            <div class="hero-title-right">
+              <h2 class="tasks-done-right">Tasks done Right</h2>
+            </div>
+          </div>
+          <div class="button-wrapper">
+            <button class="button1" id="button1">
+              <div class="get-started">Get Started</div>
+            </button>
+          </div>
+        </section>
+        <div class="about-content-parent">
+          <div class="about-content">
+            <div class="about-inner">
+              <div class="about-description-wrapper">
+                <div class="about-description">
+                  <b class="about-us">About Us</b>
+                  <div class="about-a-r-k">
+                    <div class="about-a-r-k-inner">
+                      <div class="we-are-wrapper">
+                        <div class="we-are">We are</div>
+                      </div>
+                      <div class="ark1">ARK</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="footer-icons">
-                  <img
-                    class="buttons-icon1"
-                    alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\linkedin-logo.png"
-                  />
-
-                  <img
-                    class="buttons-icon2"
-                    alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\youtube.png"
-                  />
-
-                  <img
-                    class="buttons-icon3"
-                    alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\instagram-logo.png"
-                  />
+              </div>
+              <div class="paragraph">
+                Welcome to ARK, your ultimate task management solution designed
+                to enhance productivity and streamline workflows. We are a team
+                of passionate professionals dedicated to creating a
+                user-friendly platform that empowers individuals and teams to
+                organize tasks, collaborate efficiently, and achieve their
+                goals. Our mission is to provide a comprehensive tool that
+                adapts to your unique needs, ensuring you stay on top of your
+                work with ease.
+              </div>
+            </div>
+          </div>
+          <div class="team-header-parent">
+            <div class="team-header">
+              <b class="the-team">The Team</b>
+            </div>
+            <div class="team-members">
+              <div class="team-member-list">
+                <div class="member-profile">
+                  <div class="member-info">
+                    <div class="member-image">
+                      <img
+                        class="member-image-child"
+                        alt=""
+                        src="Foto\Gal.jpg"
+                      />
+                    </div>
+                    <div class="member-name-role">
+                      <div class="member-name">
+                        <div class="galnoel-rindengan">Galnoel Rindengan</div>
+                      </div>
+                      <div class="backend-developer-project-lead-container">
+                        <p class="backend-developer">Backend Developer</p>
+                        <p class="project-lead">Project Lead</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="member-info1">
+                    <div class="member-info-inner">
+                      <img class="frame-child" alt="" src="Foto/PP2.jpg" />
+                    </div>
+                    <div class="frame-group">
+                      <div class="made-narayindra-wrapper">
+                        <div class="made-narayindra">Made narayindra</div>
+                      </div>
+                      <div class="frontend-developer">Frontend Developer</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="member-profile1">
+                <div class="member-info2">
+                  <div class="member-image1">
+                    <img class="member-image-item" alt="" src="Foto\Geo.jpg" />
+                  </div>
+                  <div class="member-name-role1">
+                    <div class="member-name1">
+                      <div class="geoffanno-tumbel">Geoffanno Tumbel</div>
+                    </div>
+                    <div class="uiux-designer">UI/UX Designer</div>
+                  </div>
+                </div>
+                <div class="member-info3">
+                  <div class="member-info-child">
+                    <img class="frame-item" alt="" src="Foto\Cindy.jpg" />
+                  </div>
+                  <div class="frame-container">
+                    <div class="cindy-indiarto-wrapper">
+                      <div class="cindy-indiarto">Cindy Indiarto</div>
+                    </div>
+                    <div class="qa-engineer">QA Engineer</div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="footer-links-container">
-            <div class="footer-links">
-              <div class="ark2">ARK</div>
-              <div class="tes">tes</div>
-              <div class="tes1">tes</div>
-              <div class="tes2">tes</div>
+        </div>
+      </main>
+      <section class="navigation-footer">
+        <div class="items1"></div>
+        <div class="divider"></div>
+        <footer class="footer-content">
+          <div class="frame-div">
+            <div class="footer-a-r-k-wrapper">
+              <div class="footer-a-r-k">
+                <div class="footer-a-r-k-link">
+                  <div class="footer-a-r-k-label">
+                    <div class="ark2">ARK</div>
+                    <div class="features">Features</div>
+                  </div>
+                </div>
+                <b class="ark3">ARK</b>
+              </div>
             </div>
-            <div class="footer-links1">
-              <div class="features">Features</div>
-              <div class="tes3">tes</div>
-              <div class="tes4">tes</div>
-              <div class="tes5">tes</div>
-            </div>
-            <div class="footer-links2">
-              <div class="others">Others</div>
-              <div class="tes6">tes</div>
-              <div class="tes7">tes</div>
-              <div class="tes8">tes</div>
+            <div class="frame-parent1">
+              <div class="footer-button-list-wrapper">
+                <div class="footer-button-list">
+                  <img
+                    class="buttons-icon"
+                    loading="lazy"
+                    alt=""
+                    src="Foto\facebook.png"
+                  />
+
+                  <img
+                    class="buttons-icon1"
+                    alt=""
+                    src="Foto\linkedin-logo.png"
+                  />
+
+                  <img class="buttons-icon2" alt="" src="Foto\youtube.png" />
+
+                  <img
+                    class="buttons-icon3"
+                    alt=""
+                    src="Foto\instagram-logo.png"
+                  />
+                </div>
+              </div>
+              <div class="footer-about">
+                <div class="about-us1">About Us</div>
+                <div class="footer-team-task">
+                  <div class="team">Team</div>
+                  <div class="task">Task</div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        </footer>
       </section>
     </div>
 
     <script>
-      var items = document.getElementById("items");
-if (items) {
-  items.addEventListener("click", function (e) {
-    // Redirect to login page URL
-    window.location.href = 'Login.html'; // Replace with your actual login page URL
-  });
-}
-
-var button = document.getElementById("button");
-if (button) {
-  button.addEventListener("click", function (e) {
-    // Redirect to login page URL
-    window.location.href = 'Login.html'; // Replace with your actual login page URL
-  });
-}
+      var button1 = document.getElementById("button1");
+      if (button1) {
+        button1.addEventListener("click", function (e) {
+          window.location.href = "Login.html";
+        });
+      }
     </script>
   </body>
 </html>
