--- a/Register.html
+++ b/Register.html
@@ -11,10 +11,9 @@
     />
   </head>
   <body>
-    
-      <div class="sign-in-register">
-        <section class="sign-in1-register">
-          <form action="register.php" method="post">
+    <div class="sign-in-register">
+      <section class="sign-in1-register">
+        <form action="register.php" method="post">
           <div class="sign-in-content-register">
             <div class="frame-parent-register">
               <div class="rectangle-parent-register">
@@ -25,7 +24,7 @@
                     class="vuesaxlineararrow-right-icon-register"
                     loading="lazy"
                     alt=""
-                    src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\back.png"
+                    src="Foto\back.png"
                     id="vuesaxlineararrowRightIconRegister"
                   />
                 </div>
@@ -89,7 +88,7 @@
                       name="password"
                     />
                     <img
-                      src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\show.png"
+                      src="Foto\show.png"
                       alt="Show Password"
                       class="show-password-icon-R"
                       onclick="togglePasswordVisibility()"
@@ -104,7 +103,9 @@
                         <div class="already-have-an-register">
                           Already have an account?
                         </div>
-                        <b class="login1-register" id="loginTextRegister">Login</b>
+                        <b class="login1-register" id="loginTextRegister"
+                          >Login</b
+                        >
                       </div>
                     </div>
                     <button
@@ -137,9 +138,8 @@
             </div>
           </div>
         </form>
-        </section>
-      </div>
-    
+      </section>
+    </div>
 
     <script>
       var backTextRegister = document.getElementById("backTextRegister");
