--- a/CreateTeam.html
+++ b/CreateTeam.html
@@ -26,7 +26,7 @@
                     class="vuesaxlinearcategory-2-icon"
                     loading="lazy"
                     alt=""
-                    src="Foto\menu.png"
+                    src="Foto/menu.png"
                   />
                   <b class="teams">Teams</b>
                 </div>
@@ -49,10 +49,21 @@
                     class="vuesaxlinearsetting-2-icon"
                     loading="lazy"
                     alt=""
-                    src="Foto\settings.png"
+                    src="Foto/settings.png"
                   />
 
                   <b class="settings2">Settings</b>
+                </div>
+              </button>
+            </div>
+            <div class="footer">
+              <button
+                class="footer-content"
+                onclick="window.location.href = 'LandingPage.html';"
+              >
+                <img class="shutdown-icon" alt="" src="Foto/logoout.png" />
+                <div class="log-out-wrapper">
+                  <div class="log-out">Log out</div>
                 </div>
               </button>
             </div>
@@ -72,14 +83,14 @@
                 class="notif-icon"
                 loading="lazy"
                 alt=""
-                src="Foto\notification-bell.png"
+                src="Foto/notification-bell.png"
               />
 
               <img
                 class="vector-icon"
                 loading="lazy"
                 alt=""
-                src="Foto\profile-user.png"
+                src="Foto/profile-user.png"
               />
             </div>
           </div>
@@ -95,7 +106,7 @@
                 class="vuesaxlineararrow-right-icon"
                 loading="lazy"
                 id="vuesaxlineararrowRightIcon"
-                src="Foto\back.png"
+                src="Foto/back.png"
               />
             </div>
             <div class="frame-container">
@@ -106,14 +117,13 @@
                 </div>
                 <div class="title-container">
                   <b class="title3">Team description</b>
-                  <textarea class="frame-item" rows="{6}" cols="{24}">
-                  </textarea>
+                  <textarea class="frame-item" rows="6" cols="24"></textarea>
                 </div>
                 <button class="group-button" id="groupButton">
-                  <button class="rectangle-parent">
+                  <div class="rectangle-parent">
                     <div class="frame-inner"></div>
                     <div class="create-team1">Create Team</div>
-                  </button>
+                  </div>
                 </button>
               </div>
             </div>
@@ -123,82 +133,102 @@
     </div>
 
     <script>
-      var newTeamButton = document.querySelector(".category");
+      document.addEventListener("DOMContentLoaded", function () {
+        var newTeamButton = document.querySelector(".category");
+        var overviewButton = document.getElementById("overviewButton");
+        var backButton = document.querySelector(".title1");
+        var arrowIcon = document.querySelector("#vuesaxlineararrowRightIcon");
+        var teamNameInput = document.getElementById("teamNameInput");
+        var groupButton = document.getElementById("groupButton");
+        var isButtonsAdded = false;
+        var newButton1;
+        var newButton2;
 
-      if (newTeamButton) {
-        newTeamButton.addEventListener("click", function () {
-          window.location.href = "CreateTeam.html";
-        });
-      }
-
-      var overviewButton = document.getElementById("overviewButton");
-      var isButtonsAdded = false;
-      var newButton1;
-      var newButton2;
-
-      if (overviewButton) {
-        overviewButton.addEventListener("click", function () {
-          if (!isButtonsAdded) {
-            newButton1 = document.createElement("button");
-            newButton1.className = "course";
-            newButton1.innerHTML = `
-              <img class="vuesaxlinearbook-icon" loading="lazy" alt="" src="Foto/open-book.png" />
-              <b class="all-task">All Task</b>
-              `;
-
-            newButton2 = document.createElement("button");
-            newButton2.className = "course1";
-            newButton2.id = "course";
-            newButton2.innerHTML = `
-                <img class="task-icon" loading="lazy" alt="" src="Foto/list.png" />
-                <b class="my-task">My Task</b>
-              `;
-
-            var parentElement = overviewButton.parentElement;
-
-            parentElement.insertBefore(newButton1, overviewButton.nextSibling);
-
-            parentElement.insertBefore(newButton2, newButton1.nextSibling);
-
-            isButtonsAdded = true;
-          } else {
-            newButton1.remove();
-            newButton2.remove();
-
-            isButtonsAdded = false;
-          }
-        });
-      }
-      var backButton = document.querySelector(".title1");
-      var arrowIcon = document.querySelector(".vuesaxlineararrow-right-icon");
-      var teamNameInput = document.getElementById("teamNameInput");
-      var groupButton = document.getElementById("groupButton");
-
-      if (backButton) {
-        backButton.addEventListener("click", function () {
-          window.location.href = "Teams.html"; // Ganti dengan URL halaman Teams.html Anda
-        });
-      }
-
-      if (arrowIcon) {
-        arrowIcon.addEventListener("click", function () {
-          window.location.href = "Teams.html"; // Ganti dengan URL halaman Teams.html Anda
-        });
-      }
-
-      function updateCreateTeamButton() {
-        var teamName = teamNameInput.value.trim();
-
-        // Menampilkan notifikasi alert jika input team name kosong
-        if (teamName === "") {
-          alert("Team name cannot be empty!");
+        if (newTeamButton) {
+          newTeamButton.addEventListener("click", function () {
+            window.location.href = "CreateTeam.html";
+          });
         }
 
-        // Menonaktifkan tombol jika input kosong
-        groupButton.disabled = teamName === "";
-      }
+        if (overviewButton) {
+          overviewButton.addEventListener("click", function () {
+            if (!isButtonsAdded) {
+              newButton1 = document.createElement("button");
+              newButton1.className = "course";
+              newButton1.innerHTML = `
+                <img class="vuesaxlinearbook-icon" loading="lazy" alt="" src="Foto/open-book.png" />
+                <b class="all-task">All Task</b>
+                `;
 
-      groupButton.addEventListener("click", updateCreateTeamButton);
+              newButton2 = document.createElement("button");
+              newButton2.className = "course1";
+              newButton2.id = "course";
+              newButton2.innerHTML = `
+                  <img class="task-icon" loading="lazy" alt="" src="Foto/list.png" />
+                  <b class="my-task">My Task</b>
+                `;
+
+              var parentElement = overviewButton.parentElement;
+
+              parentElement.insertBefore(
+                newButton1,
+                overviewButton.nextSibling
+              );
+              parentElement.insertBefore(newButton2, newButton1.nextSibling);
+
+              isButtonsAdded = true;
+              newButton1.addEventListener("click", function () {
+                window.location.href = "AllTask.html";
+              });
+              newButton2.addEventListener("click", function () {
+                window.location.href = "MyTask.html";
+              });
+            } else {
+              newButton1.remove();
+              newButton2.remove();
+              isButtonsAdded = false;
+            }
+          });
+        }
+
+        if (backButton) {
+          backButton.addEventListener("click", function () {
+            window.location.href = "Teams.html"; // Ganti dengan URL halaman Teams.html Anda
+          });
+        }
+
+        if (arrowIcon) {
+          arrowIcon.addEventListener("click", function () {
+            window.location.href = "Teams.html"; // Ganti dengan URL halaman Teams.html Anda
+          });
+        }
+
+        function validateTeamName() {
+          var teamName = teamNameInput.value.trim();
+          if (teamName === "") {
+            alert("Team name cannot be empty!");
+            return false;
+          }
+          return true;
+        }
+
+        groupButton.addEventListener("click", function (event) {
+          console.log("Create Team button clicked");
+          if (validateTeamName()) {
+            window.location.href = "AdmAllTask.html"; // Ganti dengan URL halaman AdmAllTask.html Anda
+          } else {
+            console.log("Validation failed: Team name is empty");
+          }
+        });
+
+        teamNameInput.addEventListener("input", function () {
+          console.log("Team name input changed: ", teamNameInput.value);
+          groupButton.disabled = teamNameInput.value.trim() === "";
+        });
+
+        console.log("Initial team name value: ", teamNameInput.value);
+        groupButton.disabled = teamNameInput.value.trim() === "";
+      });
     </script>
   </body>
 </html>
