--- a/Login.html
+++ b/Login.html
@@ -19,7 +19,7 @@
             <div class="back-navigation-child"></div>
             <b class="back" id="backText">Back</b>
             <img
-              src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\back.png"
+              src="Foto\back.png"
               alt=""
               class="vuesaxlineararrow-right-icon"
               id="vuesaxlineararrowRightIcon"
@@ -62,7 +62,7 @@
                 <div class="password-separator"></div>
               </div>
               <img
-                src="C:\INDRA\KULIAH\SEMESTER 4\Pemrograman Web\Tugas Akhir\Foto\show.png"
+                src="Foto\show.png"
                 alt="Show Password"
                 class="show-password-icon"
               />
