fix: next path page

--- a/Login.html
+++ b/Login.html
@@ -129,7 +129,7 @@
       if (loginButton) {
         loginButton.addEventListener("click", function (e) {
           // Redirect to Teams page
-          window.location.href = "Teams.html"; // Replace with your Teams page URL
+          window.location.href = "tasks.php"; // Replace with your Teams page URL
         });
       }
 
