--- a/Login.html
+++ b/Login.html
@@ -98,7 +98,7 @@
       var backText = document.getElementById("backText");
       if (backText) {
         backText.addEventListener("click", function (e) {
-          window.location.href = "LandingPage.html";
+          window.location.href = "index.html";
         });
       }
 
@@ -107,7 +107,7 @@
       );
       if (vuesaxlineararrowRightIcon) {
         vuesaxlineararrowRightIcon.addEventListener("click", function (e) {
-          window.location.href = "LandingPage.html";
+          window.location.href = "index.html";
         });
       }
 
