--- a/Register.html
+++ b/Register.html
@@ -146,7 +146,7 @@
       if (backTextRegister) {
         backTextRegister.addEventListener("click", function (e) {
           // Redirect to Landing page
-          window.location.href = "LandingPage.html"; // Replace with your Landing page URL
+          window.location.href = "index.html"; // Replace with your Landing page URL
         });
       }
       var lOGINTextRegister = document.getElementById("lOGINTextRegister");
@@ -170,7 +170,7 @@
         vuesaxlineararrowRightIconRegister.addEventListener(
           "click",
           function (e) {
-            window.location.href = "LandingPage.html"; // Replace with your Landing page URL
+            window.location.href = "index.html"; // Replace with your Landing page URL
           }
         );
       }
