--- a/index.html
+++ b/index.html
@@ -157,17 +157,13 @@
             <div class="footer-a-r-k-wrapper">
               <div class="footer-a-r-k">
                 <div class="footer-a-r-k-link">
-                  <div class="footer-a-r-k-label">
-                    <div class="ark2">ARK</div>
-                    <div class="features">Features</div>
-                  </div>
                 </div>
                 <b class="ark3">ARK</b>
               </div>
             </div>
             <div class="frame-parent1">
               <div class="footer-button-list-wrapper">
-                <div class="footer-button-list">
+                <!-- <div class="footer-button-list">
                   <img
                     class="buttons-icon"
                     loading="lazy"
@@ -188,14 +184,7 @@
                     alt=""
                     src="Foto\instagram-logo.png"
                   />
-                </div>
-              </div>
-              <div class="footer-about">
-                <div class="about-us1">About Us</div>
-                <div class="footer-team-task">
-                  <div class="team">Team</div>
-                  <div class="task">Task</div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
